--- a/student.ipynb
+++ b/student.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,13 @@
     "import sqlite3\n",
     "import csv\n",
     "import numpy as np\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime\n",
+    "import gzip \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +89,400 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000.0</td>\n",
+       "      <td>760507648.0</td>\n",
+       "      <td>2.776345e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000.0</td>\n",
+       "      <td>241063872.0</td>\n",
+       "      <td>1.045664e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000.0</td>\n",
+       "      <td>42762352.0</td>\n",
+       "      <td>1.497624e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000.0</td>\n",
+       "      <td>459005856.0</td>\n",
+       "      <td>1.403014e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000.0</td>\n",
+       "      <td>620181376.0</td>\n",
+       "      <td>1.316722e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "   production_budget  domestic_gross  worldwide_gross  \n",
+       "0        425000000.0     760507648.0     2.776345e+09  \n",
+       "1        410600000.0     241063872.0     1.045664e+09  \n",
+       "2        350000000.0      42762352.0     1.497624e+08  \n",
+       "3        330600000.0     459005856.0     1.403014e+09  \n",
+       "4        317000000.0     620181376.0     1.316722e+09  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budget=pd.read_csv(\"zippedData/tn.movie_budgets.csv.gz\")\n",
+    "movie_budget\n",
+    "#Cast to numeric data type\n",
+    "movie_budget['production_budget'] = movie_budget['production_budget'].replace('[^.0-9]', '', regex=True).astype('float32')\n",
+    "movie_budget['domestic_gross'] = movie_budget['domestic_gross'].replace('[^.0-9]', '', regex=True).astype('float32')\n",
+    "movie_budget['worldwide_gross'] = movie_budget['worldwide_gross'].replace('[^.0-9]', '',regex = True).astype('float64')\n",
+    "movie_budget.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5782, 6)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "movie_budget.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5782 entries, 0 to 5781\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   id                 5782 non-null   int64  \n",
+      " 1   release_date       5782 non-null   object \n",
+      " 2   movie              5782 non-null   object \n",
+      " 3   production_budget  5782 non-null   float32\n",
+      " 4   domestic_gross     5782 non-null   float32\n",
+      " 5   worldwide_gross    5782 non-null   float64\n",
+      "dtypes: float32(2), float64(1), int64(1), object(2)\n",
+      "memory usage: 226.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_budget.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                   0\n",
+       "release_date         0\n",
+       "movie                0\n",
+       "production_budget    0\n",
+       "domestic_gross       0\n",
+       "worldwide_gross      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budget.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budget.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "      <th>international_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000.0</td>\n",
+       "      <td>760507648.0</td>\n",
+       "      <td>2.776345e+09</td>\n",
+       "      <td>2.015838e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000.0</td>\n",
+       "      <td>241063872.0</td>\n",
+       "      <td>1.045664e+09</td>\n",
+       "      <td>8.046000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000.0</td>\n",
+       "      <td>42762352.0</td>\n",
+       "      <td>1.497624e+08</td>\n",
+       "      <td>1.070000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000.0</td>\n",
+       "      <td>459005856.0</td>\n",
+       "      <td>1.403014e+09</td>\n",
+       "      <td>9.440081e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000.0</td>\n",
+       "      <td>620181376.0</td>\n",
+       "      <td>1.316722e+09</td>\n",
+       "      <td>6.965404e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Dec 18, 2015</td>\n",
+       "      <td>Star Wars Ep. VII: The Force Awakens</td>\n",
+       "      <td>306000000.0</td>\n",
+       "      <td>936662208.0</td>\n",
+       "      <td>2.053311e+09</td>\n",
+       "      <td>1.116649e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Apr 27, 2018</td>\n",
+       "      <td>Avengers: Infinity War</td>\n",
+       "      <td>300000000.0</td>\n",
+       "      <td>678815488.0</td>\n",
+       "      <td>2.048134e+09</td>\n",
+       "      <td>1.369319e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>May 24, 2007</td>\n",
+       "      <td>Pirates of the Caribbean: At Worldâs End</td>\n",
+       "      <td>300000000.0</td>\n",
+       "      <td>309420416.0</td>\n",
+       "      <td>9.634204e+08</td>\n",
+       "      <td>6.540000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Nov 17, 2017</td>\n",
+       "      <td>Justice League</td>\n",
+       "      <td>300000000.0</td>\n",
+       "      <td>229024288.0</td>\n",
+       "      <td>6.559452e+08</td>\n",
+       "      <td>4.269209e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Nov 6, 2015</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>300000000.0</td>\n",
+       "      <td>200074176.0</td>\n",
+       "      <td>8.796209e+08</td>\n",
+       "      <td>6.795467e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "5   6  Dec 18, 2015         Star Wars Ep. VII: The Force Awakens   \n",
+       "6   7  Apr 27, 2018                       Avengers: Infinity War   \n",
+       "7   8  May 24, 2007   Pirates of the Caribbean: At Worldâs End   \n",
+       "8   9  Nov 17, 2017                               Justice League   \n",
+       "9  10   Nov 6, 2015                                      Spectre   \n",
+       "\n",
+       "   production_budget  domestic_gross  worldwide_gross  international_gross  \n",
+       "0        425000000.0     760507648.0     2.776345e+09         2.015838e+09  \n",
+       "1        410600000.0     241063872.0     1.045664e+09         8.046000e+08  \n",
+       "2        350000000.0      42762352.0     1.497624e+08         1.070000e+08  \n",
+       "3        330600000.0     459005856.0     1.403014e+09         9.440081e+08  \n",
+       "4        317000000.0     620181376.0     1.316722e+09         6.965404e+08  \n",
+       "5        306000000.0     936662208.0     2.053311e+09         1.116649e+09  \n",
+       "6        300000000.0     678815488.0     2.048134e+09         1.369319e+09  \n",
+       "7        300000000.0     309420416.0     9.634204e+08         6.540000e+08  \n",
+       "8        300000000.0     229024288.0     6.559452e+08         4.269209e+08  \n",
+       "9        300000000.0     200074176.0     8.796209e+08         6.795467e+08  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#getting the international gross\n",
+    "movie_budget['international_gross'] = movie_budget['worldwide_gross'] - movie_budget['domestic_gross']\n",
+    "cols = list(movie_budget.columns)\n",
+    "\n",
+    "movie_budget.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#load data from tn.movie_budgets.csv into a dataframe\n",
-    "movies_budget = pd.read_csv('zippedData/tn.movie_budgets.csv')\n",
-    "\n",
-    "#cast to numeric data type\n",
-    "movies_budget['production_budget'] = movies_budget['production_budget'].replace('[^.0-9]', '', regex=True).astype('float32')\n",
-    "movies_budget['domestic_gross'] = movies_budget['domestic_gross'].replace('[^.0-9]', '', regex=True).astype('float32')\n",
-    "movies_budget['worldwide_gross'] = movies_budget['worldwide_gross'].replace('[^.0-9]', '',regex = True).astype('float64')\n",
-    "movies_budget.head(5)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
