--- a/student.ipynb
+++ b/student.ipynb
@@ -1577,7 +1577,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Box Office Mojo Dataset\n",
+    "### Box Office Movie Dataset\n",
     "This dataset has domestic_gross and foreign_gross information."
    ]
   },
@@ -1781,6 +1781,228 @@
    ],
    "source": [
     "movie_gross['year'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3387 entries, 0 to 3386\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   title           3387 non-null   object \n",
+      " 1   studio          3382 non-null   object \n",
+      " 2   domestic_gross  3359 non-null   float64\n",
+      " 3   foreign_gross   2037 non-null   object \n",
+      " 4   year            3387 non-null   int64  \n",
+      "dtypes: float64(1), int64(1), object(3)\n",
+      "memory usage: 132.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_gross.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title                0\n",
+       "studio               5\n",
+       "domestic_gross      28\n",
+       "foreign_gross     1350\n",
+       "year                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_gross.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title             0\n",
+       "studio            2\n",
+       "domestic_gross    0\n",
+       "foreign_gross     0\n",
+       "year              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop the rows without gross values\n",
+    "movie_gross.dropna(subset=['foreign_gross','domestic_gross'], inplace=True)\n",
+    "movie_gross.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Movie DB Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genre_ids</th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[12, 14, 10751]</td>\n",
+       "      <td>12444</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Harry Potter and the Deathly Hallows: Part 1</td>\n",
+       "      <td>33.533</td>\n",
+       "      <td>2010-11-19</td>\n",
+       "      <td>Harry Potter and the Deathly Hallows: Part 1</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>10788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[14, 12, 16, 10751]</td>\n",
+       "      <td>10191</td>\n",
+       "      <td>en</td>\n",
+       "      <td>How to Train Your Dragon</td>\n",
+       "      <td>28.734</td>\n",
+       "      <td>2010-03-26</td>\n",
+       "      <td>How to Train Your Dragon</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>7610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[12, 28, 878]</td>\n",
+       "      <td>10138</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Iron Man 2</td>\n",
+       "      <td>28.515</td>\n",
+       "      <td>2010-05-07</td>\n",
+       "      <td>Iron Man 2</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>12368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[16, 35, 10751]</td>\n",
+       "      <td>862</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>28.005</td>\n",
+       "      <td>1995-11-22</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>10174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[28, 878, 12]</td>\n",
+       "      <td>27205</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>27.920</td>\n",
+       "      <td>2010-07-16</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>22186</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             genre_ids     id original_language  \\\n",
+       "0      [12, 14, 10751]  12444                en   \n",
+       "1  [14, 12, 16, 10751]  10191                en   \n",
+       "2        [12, 28, 878]  10138                en   \n",
+       "3      [16, 35, 10751]    862                en   \n",
+       "4        [28, 878, 12]  27205                en   \n",
+       "\n",
+       "                                 original_title  popularity release_date  \\\n",
+       "0  Harry Potter and the Deathly Hallows: Part 1      33.533   2010-11-19   \n",
+       "1                      How to Train Your Dragon      28.734   2010-03-26   \n",
+       "2                                    Iron Man 2      28.515   2010-05-07   \n",
+       "3                                     Toy Story      28.005   1995-11-22   \n",
+       "4                                     Inception      27.920   2010-07-16   \n",
+       "\n",
+       "                                          title  vote_average  vote_count  \n",
+       "0  Harry Potter and the Deathly Hallows: Part 1           7.7       10788  \n",
+       "1                      How to Train Your Dragon           7.7        7610  \n",
+       "2                                    Iron Man 2           6.8       12368  \n",
+       "3                                     Toy Story           7.9       10174  \n",
+       "4                                     Inception           8.3       22186  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmdb_movie= pd.read_csv('zippedData/tmdb.movies.csv.gz', index_col=0)\n",
+    "tmdb_movie.head(5)"
    ]
   }
  ],
